tests/samples/negative/visibility/private_reexport_const.ax
module private_reexport_const;

import samplelib.reexport_facade;

fn main() -> i32 {
    return hidden_base;
}

